# gopath_example

./: BUILD.bazel  WORKSPACE  printdata.go
